metrics: 增加nameservers字段
