# docs/swagger.json
@@ -2525,6 +2525,7 @@
                 "host",
                 "kernel",
                 "memory",
+                "nameservers",
                 "os",
                 "time"
             ],
@@ -2635,6 +2636,16 @@
                             "example": 8589930496
                         }
                     }
+                },
+                "nameservers": {
+                    "description": "DNS服务器地址列表",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "192.168.1.1"
+                    ]
                 },
                 "os": {
                     "type": "object",
